# mottled

./: .gitignore  CHANGELOG.md  README.md  bvh.py  cache.py  capture.py  cli.py  compare.py  config.py  density.py  intervene.py  metrics.py  neighbors.py  projection.py  pyproject.toml  pytest.ini  requirements.txt  sae.py  serve.py  statefile.py  terrain.py  trajectory.py  ui.py
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
docs/: mtj-format.md
models/: __init__.py  families.py  synthetic.py
site/: index.html  style.css
tests/: test_bvh.py  test_cache.py  test_capture.py  test_compare.py  test_density.py  test_intervene.py  test_metrics.py  test_neighbors.py  test_projection.py  test_sae.py  test_scene.py  test_serve.py  test_statefile.py  test_terrain.py  test_trajectory.py  test_ui.py
viewer/: README.md  index.html  main.js  mtj.js  style.css
viewer/samples/: gpt2-capitals.mtj  scene-abc.mtj  self-portrait.mtj  single.mtj
viewer/tests/: parser.test.js
